--- a/src/test/java/Readme
+++ b/src/test/java/Readme
@@ -1,4 +1,4 @@
-Файл Tests.java - содержит оптимальный набор тестов.
+Файл Tests.java - содержит оптимальный набор тестов для проверки класса Rational
 Файл Check.java - содержит код для проверки в ручную, чтобы можно было поиграть с классом Rational
 
 при компиляции Tests.java 
@@ -11,3 +11,5 @@
 java version "13.0.1" 2019-10-15
 Java(TM) SE Runtime Environment (build 13.0.1+9)
 Java HotSpot(TM) 64-Bit Server VM (build 13.0.1+9, mixed mode, sharing)
+
+При тестах есть два фэйла, связанные с ошибкой в функции less в 60 строке.
